--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
+    "child-process": "^1.0.2",
+    "classnames": "^2.2.5",
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "react": "15.0.2",
     "react-dom": "15.0.2",
@@ -24,7 +27,8 @@
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
-    "toastr": "2.1.2"
+    "toastr": "2.1.2",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
@@ -32,6 +36,7 @@
     "babel-eslint": "^8.2.1",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
@@ -54,6 +59,7 @@
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
+    "node-sass": "^4.7.2",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "prop-types": "^15.6.0",
@@ -61,9 +67,10 @@
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.0",
+    "webpack": "^1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0"
   },
